# libtrem

./: README.md  meson.build
data/: libtrem.gresource.xml  meson.build
data/ui/: bluetoothButton.blp  bluetoothInfo.blp  lockscreenMpris.blp  meson.build  networkButton.blp  networkInfo.blp  notification.blp  notificationCenter.blp  upowerDevice.blp  upowerDevices.blp  userCenter.blp  weather.blp
include/: dwl-helper.h  zdwl.vapi
protocols/: dwl-ipc.xml  meson.build
src/: calendar.vala  evolutionDataServer.vala  meson.build  test.vala  weather.vala
src/services/: calendar.vala  dwl-helper.c  dwl.vala  evolutionDataServer.vala  function-utils.vala  networkAgent.vala  nm-secret-utils.vala  remoteSearch.vala  weather.vala
src/services/dwl/: dwlIpc.vala  wl-source.vala
src/services/evolution/: calendar.vala  evolutionDataServer.vala  task.vala
src/services/network/: networkAgent.vala  networkAgentHandler.vala
src/services/polkit/: polkitAget.vala
src/services/wayland/: dwlIpc.vala  wl-source.vala
src/widgets/: bluetoothButton.vala  bluetoothInfo.vala  lockscreenMpris.vala  networkButton.vala  networkInfo.vala  notification.vala  notificationCenter.vala  upowerDevice.vala  upowerDevices.vala  userCenter.vala  weather.vala
